@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-03-15T00:42:47Z",
+  "timestamp" : "2025-03-16T12:14:39Z",
   "count_outdated" : 2939,
   "uniques_outdated" : 956,
-  "count" : 2965,
-  "uniques" : 972,
+  "count" : 2971,
+  "uniques" : 973,
   "views" : [
     {
       "timestamp": "2025-03-06T00:00:00Z",
@@ -67,6 +67,15 @@
       "uniques": 4,
       "uniques_minmax": [ 1, 4 ],
       "uniques_decinc": [ 0, 4 ]
+    },
+    {
+      "timestamp": "2025-03-16T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "count_decinc": [ 0, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
