@@ -1,6 +1,6 @@
 {
-  "count": 26,
-  "uniques": 16,
+  "count": 32,
+  "uniques": 17,
   "views": [
     {
       "timestamp": "2025-03-06T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2025-03-13T00:00:00Z",
       "count": 5,
       "uniques": 4
+    },
+    {
+      "timestamp": "2025-03-16T00:00:00Z",
+      "count": 6,
+      "uniques": 1
     }
   ]
 }
